--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@ https://github.com/sno/unity-webgl-responsive
     <title>FlyingSanta</title>
   </head>
   <body>
+    <img id="spinner" src="/bg-spinner.gif" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 128px; height: 128px; z-index: 1;"></img>
     <div class="webgl-wrapper">
       <div class="aspect"></div>
-      <div class="webgl-content">
+      <div class="webgl-content" >
         <div id="unityContainer">
           <canvas id="unity-canvas" style="background: #6C6C6C"></canvas>
         </div>
@@ -32,6 +33,9 @@ https://github.com/sno/unity-webgl-responsive
     </div>
     <script src="MyLoader.js"></script>
     <script>
+
+      const spinner = document.querySelector('#spinner')
+
       createUnityInstance(document.querySelector("#unity-canvas"), {
         dataUrl: "Build/Build.data.unityweb",
         frameworkUrl: "Build/Build.asm.framework.js.unityweb",
@@ -43,6 +47,7 @@ https://github.com/sno/unity-webgl-responsive
         productVersion: "1.6",
       }).then((unityInstance) => {
         myGameInstance = unityInstance;
+        spinner.remove()
       });
     </script>
 
