added bg spinner

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ https://github.com/sno/unity-webgl-responsive
     <title>FlyingSanta</title>
   </head>
   <body>
-    <img id="spinner" src="/bg-spinner.gif" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 128px; height: 128px; z-index: 1;"></img>
+    <img id="spinner" src="bg-spinner.gif" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 128px; height: 128px; z-index: 1;"></img>
     <div class="webgl-wrapper">
       <div class="aspect"></div>
       <div class="webgl-content" >
