--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ https://github.com/sno/unity-webgl-responsive
 
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
-
+    <script src="https://cdn.socket.io/4.4.0/socket.io.min.js" integrity="sha384-1fOn6VtTq3PWwfsOrk45LnYcGosJwzMHv+Xh/Jx5303FVOXzEnw0EpLv30mtjmlj" crossorigin="anonymous"></script>
+    
     <title>FlyingSanta</title>
   </head>
   <body>
