--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ https://github.com/sno/unity-webgl-responsive
         </div>
       </div>
     </div>
+    <script src="socket.js"></script>
     <script src="MyLoader.js"></script>
     <script>
 
