--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@ https://github.com/sno/unity-webgl-responsive
     <title>FlyingSanta</title>
   </head>
   <body>
-    <img id="spinner" src="bg-spinner.gif" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 128px; height: 128px; z-index: 1;"></img>
+    <div id="spinner" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: 1;">
+      <img  src="main_menu.png" style="width: 100%; height: 100%; object-fit: cover; object-position: center;"></img>
+    </div>
     <div class="webgl-wrapper">
       <div class="aspect"></div>
       <div class="webgl-content" >
